# Simulator

./: .gitignore  CMakeLists.txt  CanSimulatorCs.rar  RELEASE_NOTES.md  automated_test_runner.py  can_msg_queue.c  can_msg_queue.h  gen_dbc.py  log_utils.c  log_utils.h  main.c  menu.c  menu.h  read_740d_dbc.py  run_auto.py  rx_decoder.c  rx_decoder.h  signal_codec.py  sim_config.c  sim_config.h  sim_log.c  sim_log.h  sim_mutex.h  sim_state.c  sim_state.h  sim_trace.c  sim_trace.h  tcp_client.c  tcp_common.h  tcp_server.c  tcp_server.h  test_runner.py  test_signals_example.yaml  tx_msg_reader.c  tx_msg_reader.h  tx_scheduler.c  tx_scheduler.h  tx_transmit.c  tx_transmit.h
TestModule/: RELEASE_NOTE.md  TEST_DESIGN.md  run_test.bat  run_test.py
TestModule/Simulator/: config.ini
TestModule/Simulator/input/: tx_CANFD_G2M-1_BUS.can  tx_CANFD_G5M_BUS.can
TestModule/Testcases/: test_original.yaml  test_runtime - Copy.yaml  test_runtime.yaml  test_runtime_auto.yaml
TestModule/framework/: __init__.py  can_lookup.py  logcat_parser.py  process_mgr.py  reporter.py  test_executor.py  validator.py  vsoc_log_parser.py
TestModule/vECU/: config.ini
TestModule/vSoC/: config.ini  rx_debug.log.bak
input/: tx.can  tx_CANFD_G2M-1_BUS.can  tx_CANFD_G2M-2_BUS.can  tx_CANFD_G5M_BUS.can
